<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titulo"
        style="@style/PadraoAgendamento"
        android:text="@string/agendamento_de_salas_fiap"
        android:padding="20dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/PadraoAgendamento"
        android:text="@string/sistema_para_agendamento_e_alerta_de_salas"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnAgendarSala"
        style="@style/BotoesPretos"
        android:text="@string/agendamento_de_sala"
        android:onClick="agendarSala"/>

    <Button
        android:id="@+id/btnSolicitarMateriais"
        style="@style/BotoesPretos"
        android:text="@string/solicita_o_de_materiais"
        android:onClick="solicitarMateriais"/>

    <Button
        android:id="@+id/btnAcompanharSolSalas"
        style="@style/BotoesCinzas"
        android:padding="16dp"
        android:text="@string/acompanhar_solicita_es_de_sala"
        android:onClick="acompanharSolSalas"/>

    <Button
        android:id="@+id/btnAcompanharSolMaterial"
        style="@style/BotoesCinzas"
        android:text="@string/acompanhar_solicita_es_de_material"
        android:onClick="acompanharSolMaterial"/>

    <Button
        android:id="@+id/btnDesconectar"
        style="@style/BotoesPretos"
        android:text="@string/desconectar"
        android:textAllCaps="true"
        android:onClick="desconectar"/>

</LinearLayout>