<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titulo"
        style="@style/PadraoAgendamento"
        android:text="@string/agendamento_de_salas_fiap"
        android:padding="20dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/PadraoAgendamento"
        android:text="@string/sistema_para_agendamento_e_alerta_de_salas"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/edtMatricula"
        android:text="@string/matr_cula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="16dp"
         />

    <EditText
        android:id="@+id/edtSenha"
        android:text="@string/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
         />

    <Button
        android:id="@+id/btnAutenticar"
        style="@style/BotoesRosa"
        android:padding="16dp"
        android:text="@string/autenticar"
        android:onClick="autenticar"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:text="@string/n_o_tem_acesso_registre_se"
        style="@style/BotoesRosa"
        android:onClick="registrar"/>

</LinearLayout>